# ChangeLog for dev-lang/gauche
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/gauche/ChangeLog,v 1.3 2004/09/07 12:22:19 hattya Exp $

  07 Sep 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.8.1.ebuild:
  stable on x86.

*gauche-0.8.1 (06 Aug 2004)

  06 Aug 2004; Akinori Hattori <hattya@gentoo.org> +gauche-0.8.1.ebuild:
  new upstream release.

*gauche-0.8 (11 Jul 2004)

  11 Jul 2004; Akinori Hattori <hattya@gentoo.org> +metadata.xml,
  +files/gauche-extract-1.13.diff, +files/gauche-gdbm-gentoo.diff,
  +gauche-0.7.3.ebuild, +gauche-0.7.4.1.ebuild, +gauche-0.7.4.2.ebuild,
  +gauche-0.8.ebuild:
  moved from dev-lisp/gauche to dev-lang/gauche.

  04 Jul 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.8.ebuild:
  marked stable on x86.

  03 Jun 2004; Aron Griffis <agriffis@gentoo.org> gauche-0.7.3.ebuild:
  Fix use invocation

*gauche-0.8 (26 May 2004)

  26 May 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.8.ebuild:
  version bump.

  07 Apr 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.7.4.2.ebuild:
  marked stable on x86.

  01 Apr 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.7.3.ebuild,
  gauche-0.7.4.1.ebuild:
  inherit eutils.

  28 Mar 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.7.4.2.ebuild,
  files/gauche-extract-1.13.diff:
  added gauche-extract-1.13.diff.
  this patch will fix a wrong regexp in doc/extract, which is used to
  generate gauche-refj.texi.

  14 Mar 2004; David Holm <dholm@gentoo.org> gauche-0.7.4.2.ebuild:
  Added to ~ppc.

*gauche-0.7.4.2 (14 Mar 2004)

  14 Mar 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.7.4.2.ebuild:
  version bumped.

  21 Feb 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.7.1.ebuild,
  gauche-0.7.2.ebuild:
  cleaned out old ebuilds.

  21 Feb 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.7.4.1.ebuild:
  fixed bug #42233. marked stable on x86.
