@@ -1,13 +1,7 @@
-MD5 c74454430b21877c00466024d57fce6a ChangeLog 4291
-MD5 d079691ed11f2f917a1bdd8819f899e4 gauche-0.7.3.ebuild 1372
-MD5 cc68ec4cf1f923bf4580f1357a8415dd gauche-0.7.4.1.ebuild 1196
-MD5 13bff3fd4b4ce53baab06c7d479eed4c gauche-0.7.4.2.ebuild 1265
+MD5 408a0d6930933ef3c1a8b28ccbe2298f ChangeLog 4463
 MD5 96547823f0d4d84b77d798089760cfde gauche-0.8.1.ebuild 1236
 MD5 a08e54bf1ab1228df32c4cab6d362c9b gauche-0.8.ebuild 1261
 MD5 e9fa98743d1cf3b213a4b04f52baf5f8 metadata.xml 619
-MD5 c72a63369fdb0fee8a8f45533b69fe5f files/digest-gauche-0.7.3 62
-MD5 89966637512684b9b73c898b067cf740 files/digest-gauche-0.7.4.1 64
-MD5 506a28faf2e5a3d88f080e411dff706c files/digest-gauche-0.7.4.2 64
 MD5 0f8ed13a6cb96a582a2cb357dd817608 files/digest-gauche-0.8 60
 MD5 f3221d3697cbf7ac15591ad202af9459 files/digest-gauche-0.8.1 62
 MD5 905b4119bbcfc50f5004668d9d806dcc files/gauche-extract-1.13.diff 524
