@@ -1,6 +1,10 @@
 # ChangeLog for dev-lang/gauche
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/gauche/ChangeLog,v 1.3 2004/09/07 12:22:19 hattya Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/gauche/ChangeLog,v 1.4 2004/09/07 12:26:35 hattya Exp $
+
+  07 Sep 2004; Akinori Hattori <hattya@gentoo.org> -gauche-0.7.3.ebuild,
+  -gauche-0.7.4.1.ebuild, -gauche-0.7.4.2.ebuild, gauche-0.8.1.ebuild:
+  cleaned out old ebuilds.
 
   07 Sep 2004; Akinori Hattori <hattya@gentoo.org> gauche-0.8.1.ebuild:
   stable on x86.
